光度（luxometer）を登録・返却可能なように各ソースとAPI定義（Swagger）を修正
